--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ p {
   line-height: 1.75; }
 
 a {
-  color: #fed136; }
+  color: #fea925; }
   a.active, a:active, a:focus, a:hover {
     color: #fec503; }
 
@@ -23,7 +23,7 @@ h5,
 h6 {
   font-weight: 700;
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  text-transform: uppercase; }
+   }
 
 section {
   padding: 100px 0; }
@@ -130,7 +130,6 @@ header.masthead {
     padding-bottom: 50px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 14px;
-      font-style: italic;
       line-height: 22px;
       margin-bottom: 10px;
       font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
@@ -148,7 +147,6 @@ header.masthead {
     padding-bottom: 20px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 30px;
-      font-style: italic;
       line-height: 40px;
       margin-bottom: 10px;
       font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
@@ -607,3 +605,15 @@ ul.social-buttons {
       font-size: 16px;
 
   }
+
+.padding-bottom-10 {
+  padding-bottom: 10px;
+}
+
+.padding-bottom-15 {
+    padding-bottom: 15px;
+}
+
+.padding-bottom-20 {
+    padding-bottom: 20px;
+}
