--- a/css/agency.css
+++ b/css/agency.css
@@ -424,7 +424,6 @@ header.masthead {
   margin-bottom: 50px;
   text-align: center; }
   .team-member img {
-    width: 225px;
     height: 225px;
     border: 7px solid white; }
   .team-member h4 {
@@ -616,4 +615,34 @@ ul.social-buttons {
 
 .padding-bottom-20 {
     padding-bottom: 20px;
+}
+
+.padding-top-10 {
+    padding-top: 10px;
+}
+
+.padding-top-15 {
+    padding-top: 15px;
+}
+
+.padding-top-20 {
+    padding-top: 20px;
+}
+
+.font-size-18 {
+    font-size: 18px;
+}
+
+.font-size-20 {
+    font-size: 20px;
+}
+
+.font-size-22 {
+    font-size: 22px;
+}
+
+.oranizer-email {
+    padding-bottom: 10px;
+    font-style: italic;
+    font-size: 20px;
 }
