--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ p {
   line-height: 1.75; }
 
 a {
-  color: #fea925; }
+  color: #fe9400; }
   a.active, a:active, a:focus, a:hover {
     color: #fec503; }
 
@@ -30,7 +30,8 @@ section {
   section h2.section-heading {
     font-size: 40px;
     margin-top: 0;
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+  }
   section h3.section-subheading {
     font-size: 16px;
     font-weight: 400;
@@ -126,7 +127,7 @@ header.masthead {
   -o-background-size: cover;
   background-size: cover; }
   header.masthead .intro-text {
-    padding-top: 50px;
+    padding-top: 80px;
     padding-bottom: 50px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 14px;
@@ -143,7 +144,7 @@ header.masthead {
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 80px;
+    padding-top: 100px;
     padding-bottom: 20px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 30px;
@@ -290,15 +291,6 @@ header.masthead {
   position: relative;
   padding: 0;
   list-style: none; }
-  .timeline:before {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 40px;
-    width: 2px;
-    margin-left: -1.5px;
-    content: '';
-    background-color: #f1f1f1; }
   .timeline > li {
     position: relative;
     min-height: 50px;
@@ -333,15 +325,15 @@ header.masthead {
       margin-left: 0;
       text-align: center;
       color: white;
-      border: 7px solid #f1f1f1;
-      border-radius: 100%;
-      background-color: #fed136; }
+      /*border: 7px solid #f1f1f1;
+      border-radius: 100%;*/
+      /*background-color: #fed136; */}
       .timeline > li .timeline-image h4 {
         font-size: 10px;
         line-height: 14px;
         margin-top: 12px; }
     .timeline > li.timeline-inverted > .timeline-panel {
-      float: right;
+      float: left;
       padding: 0 20px 0 100px;
       text-align: left; }
       .timeline > li.timeline-inverted > .timeline-panel:before {
@@ -366,18 +358,17 @@ header.masthead {
     margin-bottom: 0; }
 
 @media (min-width: 768px) {
-  .timeline:before {
-    left: 50%; }
+
   .timeline > li {
     min-height: 100px;
     margin-bottom: 100px; }
     .timeline > li .timeline-panel {
       float: left;
-      width: 41%;
+      width: 80%;
       padding: 0 20px 20px 30px;
       text-align: right; }
     .timeline > li .timeline-image {
-      left: 50%;
+      left: 10%;
       width: 100px;
       height: 100px;
       margin-left: -50px; }
@@ -386,7 +377,7 @@ header.masthead {
         line-height: 18px;
         margin-top: 16px; }
     .timeline > li.timeline-inverted > .timeline-panel {
-      float: right;
+      left: 20%;
       padding: 0 30px 20px 20px;
       text-align: left; } }
 
@@ -412,8 +403,8 @@ header.masthead {
     .timeline > li .timeline-panel {
       padding: 0 20px 20px 100px; }
     .timeline > li .timeline-image {
-      width: 170px;
-      height: 170px;
+      /*width: 170px;*/
+      height: 150px;
       margin-left: -85px; }
       .timeline > li .timeline-image h4 {
         margin-top: 40px; }
