--- a/css/agency.css
+++ b/css/agency.css
@@ -155,7 +155,7 @@ header.masthead {
       font-size: 40px;
       font-weight: 700;
       line-height: 45px;
-      margin-bottom: 20px;
+      margin-bottom: 0;
       font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       text-transform: uppercase; } }
 
