Navbar font update

--- a/css/agency.css
+++ b/css/agency.css
@@ -100,7 +100,7 @@ body {
     border: none;
     background-color: transparent; }
     #mainNav .navbar-brand {
-      font-size: 1.75em;
+      /*font-size: 1.75em;*/
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s; }
