--- a/css/agency.css
+++ b/css/agency.css
@@ -304,7 +304,7 @@ header.masthead {
     .timeline > li .timeline-panel {
       position: relative;
       float: right;
-      width: 100%;
+      width: 90%;
       padding: 0 20px 0 100px;
       text-align: left; }
       .timeline > li .timeline-panel:before {
@@ -334,7 +334,7 @@ header.masthead {
         line-height: 14px;
         margin-top: 12px; }
     .timeline > li.timeline-inverted > .timeline-panel {
-      float: left;
+      float: right;
       padding: 0 20px 0 50px;
       text-align: left; }
       .timeline > li.timeline-inverted > .timeline-panel:before {
@@ -364,7 +364,7 @@ header.masthead {
     min-height: 100px;
     margin-bottom: 30px; }
     .timeline > li .timeline-panel {
-      float: left;
+      float: left !important;;
       width: 80%;
       padding: 0 20px 20px 30px;
       text-align: right; }
@@ -386,6 +386,7 @@ header.masthead {
   .timeline > li {
     min-height: 150px; }
     .timeline > li .timeline-panel {
+        float: left !important;
       padding: 0 20px 20px; }
     .timeline > li .timeline-image {
       width: 150px;
