Small headline corrections

--- a/css/agency.css
+++ b/css/agency.css
@@ -622,6 +622,14 @@ ul.social-buttons {
     padding-top: 20px;
 }
 
+.padding-top-30 {
+    padding-top: 30px;
+}
+
+.padding-top-40 {
+    padding-top: 40px;
+}
+
 .font-size-18 {
     font-size: 18px;
 }
